# algo_lab1

./: .clang-format  CMakeLists.txt  task0-exponentiation-binary.cpp  task0-exponentiation-naive.cpp  task1-num-multiplication-grade-school.cpp  task1-num-multiplication-karatsuba.cpp  task2-matrix-multiplication-row-column-with-bT.cpp  task2-matrix-multiplication-row-column.cpp  task2-matrix-multiplication-strassen.cpp
tests/: exponentiation.py  matrix-multiplication.py  num-multiplication.py
tests/exponentiation/: 10.in  100.in  100.out  11.in  12.in  13.in  14.in  15.in  16.in  17.in  18.in  19.in  20.in  21.in  22.in  23.in  24.in  25.in  26.in  27.in  27.out  28.in  28.out  29.in  29.out  30.in  30.out  31.in  31.out  32.in  32.out  33.in  33.out  34.in  34.out  35.in  35.out  36.in  36.out  37.in  (+126 more)
tests/matrix-multiplication/: 1.in  10.in  10.out  100.in  100.out  11.in  11.out  12.in  12.out  13.in  13.out  14.in  14.out  15.in  15.out  16.in  16.out  17.in  17.out  18.in  18.out  19.in  19.out  2.in  2.out  20.in  20.out  21.in  21.out  22.in  22.out  23.in  23.out  24.in  24.out  25.in  25.out  26.in  26.out  27.in  (+159 more)
tests/num-multiplication/: 100.in  100.out  18.in  18.out  19.in  19.out  20.in  21.in  21.out  22.in  23.in  24.in  24.out  25.in  26.in  27.in  27.out  28.in  28.out  29.in  29.out  30.in  30.out  31.in  31.out  32.in  32.out  33.in  33.out  34.in  34.out  35.in  35.out  36.in  36.out  37.in  37.out  38.in  38.out  39.in  (+123 more)
utils/: common.h  exponentiation.h  matrix-multiplication.h  num-multiplication.h
